--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <img src="https://via.placeholder.com/50" alt="">
+        <img src="asset/mundomascotas.png" alt="">
         <ul class="nav">
             <li class="nav_link"><a href="#">Inicio</a></li>
             <li class="nav_link"><a href="#">Nosotros</a></li>
