se agregar secciónes de portada y productos y servicios

--- a/index.html
+++ b/index.html
@@ -15,5 +15,30 @@
             <li class="nav_link"><a href="#">Contacto</a></li>
         </ul>
     </nav>
+    <section id="portada">
+        <div class="card_info">
+            <h1 class="card_title">El lugar para tu mascota</h1>
+            <p class="mision">
+                Nuestra Misión es que tu mascota se sienta amada
+            </p>
+            <div class="card_btns">
+                <button class="btn btn--secondary">Nosotros</button>
+                <button class="btn btn--primary">Productos y Servicios</button>
+            </div>
+            <div class="card">
+                <img src="./asset/mundomascotas.png" alt="mascota" class="card_img"/>
+            </div>   
+        </div>   
+    </section>
+    <br>
+    <section id="productos_servicios">
+        <div class="card_prod_servicios">
+            <p class="prod_serv">
+                Nuestro productos y servicios son elegidos con la calidad que tu mascota se merece.
+                Desde la hora de su comida hasta su recreación son importantes para nosotros.
+                Te ofrecemos un catalogo con una amplia variedad de productos y servicios.
+            </p>
+        </div>   
+    </section>
 </body>
 </html>
