--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button class="btn btn--primary">Productos y Servicios</button>
             </div>
             <div class="card">
-                <img src="./asset/mundomascotas.png" alt="mascota" class="card_img"/>
+                <img src="./asset/pets.png" alt="mascota" class="card_img"/>
             </div>   
         </div>   
     </section>
