se modifico seccion de E3 y se agrego seccion de contacto

--- a/index.html
+++ b/index.html
@@ -15,22 +15,21 @@
             <li class="nav_link"><a href="#">Contacto</a></li>
         </ul>
     </nav>
-    <section id="portada">
-        <div class="card_info">
-            <h1 class="card_title">El lugar para tu mascota</h1>
-            <p class="mision">
-                Nuestra Misión es que tu mascota se sienta amada
-            </p>
-            <div class="card_btns">
-                <button class="btn btn--secondary">Nosotros</button>
-                <button class="btn btn--primary">Productos y Servicios</button>
-            </div>
-            <div class="card">
-                <img src="./asset/pets.png" alt="mascota" class="card_img"/>
+    <main>
+        <section id="portada">
+            <div class="card_info">
+                <h1 class="card_title">El lugar para tu mascota</h1>
+                <p class="mision">
+                    Nuestra Misión es que tu mascota se sienta amada
+                </p>
+                <div class="card_btns">
+                    <button class="btn-secondary">Nosotros</button>
+                    <button class="btn-primary">Productos y Servicios</button>
+                </div>
+                <img src="./asset/pets.png" alt="mascota" class="portada-img">   
             </div>   
-        </div>   
-    </section>
-    <br>
+        </section>
+    </main>
     <section id="productos_servicios">
         <div class="card_prod_servicios">
             <p class="prod_serv">
@@ -40,5 +39,28 @@
             </p>
         </div>   
     </section>
+    <section id="beneficios">
+        <div class="beneficios-mensaje">
+            <h1 class="beneficios-titulos">
+                Beneficios exclusivos para clientes
+            </h1>
+            <p class="benrficios-parrafo">
+                Nuestros clientes tienen una gran variedad de beneficios que te permitiran mimar a tu mascota
+            </p>
+        </div>
+        <div class="card-beneficios">
+            <div class="card1">
+
+            </div>
+            <div class="card2">
+
+            </div>
+            <div class="card3">
+
+            </div>
+
+        </div>
+    </section>
+
 </body>
 </html>
