se agrego imagenes de card

--- a/index.html
+++ b/index.html
@@ -41,25 +41,29 @@
     </section>
     <section id="beneficios">
         <div class="beneficios-mensaje">
-            <h1 class="beneficios-titulos">
+            <h2 class="beneficios-titulos">
                 Beneficios exclusivos para clientes
-            </h1>
+            </h2>
             <p class="benrficios-parrafo">
                 Nuestros clientes tienen una gran variedad de beneficios que te permitiran mimar a tu mascota
             </p>
         </div>
-        <div class="card-beneficios">
+    </section>
+    <section id="card-beneficios">
+        <div class="card-beneficio1">
             <div class="card1">
-
+                <img src="./asset/paseos.png" alt="paseos" class="paseos-img">
+                <h3 class="titulo-card1">Descuento en paseos</h3>
+                <p class="mensaje-card1">Descubre los paseos con el 25% de descuento para nuestros clientes</p>
             </div>
-            <div class="card2">
-
-            </div>
-            <div class="card3">
-
-            </div>
-
         </div>
+        <div class="card-beneficio2">
+            <div class="card2">
+                <img src="./asset/lavado.png" alt="paseos" class="lavados-img">
+                <h3 class="titulo-card2">Primer baño gratis</h3>
+                <p class="mensaje-card2">Con la primer compra te llevas 1 baño gratis, valido 30 dias.</p>
+            </div>
+        </div>   
     </section>
 
 </body>
